@@ -30,4 +30,3 @@ blockquote
 	margin-left:5px;
 	width:100%;
 }
-
